Added CSS import
Added import for CSS document.

--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap-theme.min.css') }}">
+    <link rel="stylesheet" href="{{ static_url('css/custom.css') }}">
     <link rel="import" href="{{ static_url('bower_components/made-with-love/made-with-love.html') }}" async>
     <title>Mongo To SQL</title>
   </head>
